
SET(Kit_SRCS
vtkBlockDistribution.h:
vtkBranchExtentTranslator.cxx:
vtkBranchExtentTranslator.h:
vtkCachingInterpolatedVelocityField.cxx:
vtkCachingInterpolatedVelocityField.h:
vtkClientServerCompositePass.cxx:
vtkClientServerCompositePass.h:
vtkClientServerSynchronizedRenderers.cxx:
vtkClientServerSynchronizedRenderers.h:
vtkCollectGraph.cxx:
vtkCollectGraph.h:
vtkCollectPolyData.cxx:
vtkCollectPolyData.h:
vtkCollectTable.cxx:
vtkCollectTable.h:
vtkCommunicator.cxx:
vtkCommunicator.h:
vtkCompositedSynchronizedRenderers.cxx:
vtkCompositedSynchronizedRenderers.h:
vtkCompositer.cxx:
vtkCompositeRenderManager.cxx:
vtkCompositeRenderManager.h:
vtkCompositeRGBAPass.cxx:
vtkCompositeRGBAPass.h:
vtkCompositer.h:
vtkCompositeZPass.cxx:
vtkCompositeZPass.h:
vtkCompositeZPassShader_fs.glsl:
vtkCompressCompositer.cxx:
vtkCompressCompositer.h:
vtkCutMaterial.cxx:
vtkCutMaterial.h:
vtkDistributedDataFilter.cxx:
vtkDistributedDataFilter.h:
vtkDistributedStreamTracer.cxx:
vtkDistributedStreamTracer.h:
vtkDummyCommunicator.cxx:
vtkDummyCommunicator.h:
vtkDummyController.cxx:
vtkDummyController.h:
vtkDuplicatePolyData.cxx:
vtkDuplicatePolyData.h:
vtkEnSightWriter.cxx:
vtkEnSightWriter.h:
vtkExodusIIWriter.cxx:
vtkExodusIIWriter.h:
vtkExtractCTHPart.cxx:
vtkExtractCTHPart.h:
vtkExtractPiece.cxx:
vtkExtractPiece.h:
vtkExtractPolyDataPiece.cxx:
vtkExtractPolyDataPiece.h:
vtkExtractUnstructuredGridPiece.cxx:
vtkExtractUnstructuredGridPiece.h:
vtkExtractUserDefinedPiece.cxx:
vtkExtractUserDefinedPiece.h:
vtkImageRenderManager.cxx:
vtkImageRenderManager.h:
vtkMemoryLimitImageDataStreamer.cxx:
vtkMemoryLimitImageDataStreamer.h:
vtkMPICommunicator.cxx:
vtkMPICommunicator.h:
vtkMPIController.cxx:
vtkMPIController.h:
vtkMPIEventLog.cxx:
vtkMPIEventLog.h:
vtkMPIGroup.cxx:
vtkMPIGroup.h:
vtkMPI.h:
vtkMPIImageReader.cxx:
vtkMPIImageReader.h:
vtkMultiProcessController.cxx:
vtkMultiProcessController.h:
vtkMultiProcessStream.cxx:
vtkMultiProcessStream.h:
vtkParallelFactory.cxx:
vtkParallelFactory.h:
vtkParallelRenderManager.cxx:
vtkParallelRenderManager.h:
vtkPassThroughFilter.cxx:
vtkPassThroughFilter.h:
vtkPBGLBreadthFirstSearch.cxx:
vtkPBGLBreadthFirstSearch.h:
vtkPBGLCollapseGraph.cxx:
vtkPBGLCollapseGraph.h:
vtkPBGLCollapseParallelEdges.cxx:
vtkPBGLCollapseParallelEdges.h:
vtkPBGLCollectGraph.cxx:
vtkPBGLCollectGraph.h:
vtkPBGLConnectedComponents.cxx:
vtkPBGLConnectedComponents.h:
vtkPBGLDistributedGraphHelper.cxx:
vtkPBGLDistributedGraphHelper.h:
vtkPBGLGraphAdapter.h:
vtkPBGLGraphSQLReader.cxx:
vtkPBGLGraphSQLReader.h:
vtkPBGLMinimumSpanningTree.cxx:
vtkPBGLMinimumSpanningTree.h:
vtkPBGLRandomGraphSource.cxx:
vtkPBGLRandomGraphSource.h:
vtkPBGLRMATGraphSource.cxx:
vtkPBGLRMATGraphSource.h:
vtkPBGLShortestPaths.cxx:
vtkPBGLShortestPaths.h:
vtkPBGLVertexColoring.cxx:
vtkPBGLVertexColoring.h:
vtkPCellDataToPointData.cxx:
vtkPCellDataToPointData.h:
vtkPChacoReader.cxx:
vtkPChacoReader.h:
vtkPCosmoHaloFinder.cxx:
vtkPCosmoHaloFinder.h:
vtkPCosmoReader.cxx:
vtkPCosmoReader.h:
vtkPDataSetReader.cxx:
vtkPDataSetReader.h:
vtkPDataSetWriter.cxx:
vtkPDataSetWriter.h:
vtkPExtractArraysOverTime.cxx:
vtkPExtractArraysOverTime.h:
vtkPHardwareSelector.cxx:
vtkPHardwareSelector.h:
vtkPieceRequestFilter.cxx:
vtkPieceRequestFilter.h:
vtkPieceScalars.cxx:
vtkPieceScalars.h:
vtkPImageWriter.cxx:
vtkPImageWriter.h:
vtkPipelineSize.cxx:
vtkPipelineSize.h:
vtkPKdTree.cxx:
vtkPKdTree.h:
vtkPLinearExtrusionFilter.cxx:
vtkPLinearExtrusionFilter.h:
vtkPNrrdReader.cxx:
vtkPNrrdReader.h:
vtkPOpenFOAMReader.cxx:
vtkPOpenFOAMReader.h:
vtkPOPReader.cxx:
vtkPOPReader.h:
vtkPOutlineCornerFilter.cxx:
vtkPOutlineCornerFilter.h:
vtkPOutlineFilter.cxx:
vtkPOutlineFilter.h:
vtkPPolyDataNormals.cxx:
vtkPPolyDataNormals.h:
vtkPProbeFilter.cxx:
vtkPProbeFilter.h:
vtkPReflectionFilter.cxx:
vtkPReflectionFilter.h:
vtkProcess.cxx:
vtkProcessGroup.cxx:
vtkProcessGroup.h:
vtkProcess.h:
vtkProcessIdScalars.cxx:
vtkProcessIdScalars.h:
vtkPSLACReader.cxx:
vtkPSLACReader.h:
vtkPSphereSource.cxx:
vtkPSphereSource.h:
vtkPStreamTracer.cxx:
vtkPStreamTracer.h:
vtkPTableToStructuredGrid.cxx:
vtkPTableToStructuredGrid.h:
vtkRectilinearGridOutlineFilter.cxx:
vtkRectilinearGridOutlineFilter.h:
vtkSocketCommunicator.cxx:
vtkSocketCommunicator.h:
vtkSocketController.cxx:
vtkSocketController.h:
vtkSubCommunicator.cxx:
vtkSubCommunicator.h:
vtkSubGroup.cxx:
vtkSubGroup.h:
vtkSynchronizedRenderers.cxx:
vtkSynchronizedRenderers.h:
vtkSynchronizedRenderWindows.cxx:
vtkSynchronizedRenderWindows.h:
vtkTemporalFractal.cxx:
vtkTemporalFractal.h:
vtkTemporalInterpolatedVelocityField.cxx:
vtkTemporalInterpolatedVelocityField.h:
vtkTemporalStreamTracer.cxx:
vtkTemporalStreamTracer.h:
vtkTransmitImageDataPiece.cxx:
vtkTransmitImageDataPiece.h:
vtkTransmitPolyDataPiece.cxx:
vtkTransmitPolyDataPiece.h:
vtkTransmitRectilinearGridPiece.cxx:
vtkTransmitRectilinearGridPiece.h:
vtkTransmitStructuredGridPiece.cxx:
vtkTransmitStructuredGridPiece.h:
vtkTransmitUnstructuredGridPiece.cxx:
vtkTransmitUnstructuredGridPiece.h:
vtkTreeCompositer.cxx:
vtkTreeCompositer.h:
vtkVPICReader.cxx:
vtkVPICReader.h:
vtkWindBladeReader.cxx:
vtkWindBladeReader.h:
vtkXMLPHierarchicalBoxDataWriter.cxx:
vtkXMLPHierarchicalBoxDataWriter.h:
vtkXMLPMultiBlockDataWriter.cxx:
vtkXMLPMultiBlockDataWriter.h:
  )

include_directories(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${VTK_SOURCE_DIR}/Common/Core
  ${VTK_BINARY_DIR}/Common/Core
  ${VTK_SOURCE_DIR}/Common/Misc
  ${VTK_SOURCE_DIR}/Common/DataModel
  ${VTK_SOURCE_DIR}/Utilities
  )

add_library(vtkParallelCore ${Kit_SRCS})

target_link_libraries(vtkParallelCore vtkCommonDataModel)
