set(vtkMetaIO_INCLUDE_DIRS
  ${CMAKE_CURRENT_BINARY_DIR}/vtkmetaio # metaIOConfig.h
  )
set(vtkMetaIO_LIBRARIES vtkmetaio)
vtk_module_impl()
SET(METAIO_FOR_VTK 1)
SET(VTK_ZLIB_LIBRARIES ${vtkzlib_LIBRARIES})
ADD_SUBDIRECTORY(vtkmetaio)
IF(NOT VTK_INSTALL_NO_LIBRARIES)
  SET_PROPERTY(GLOBAL APPEND PROPERTY VTK_TARGETS vtkmetaio)
ENDIF(NOT VTK_INSTALL_NO_LIBRARIES)
